--- a/backend/package.json
+++ b/backend/package.json
@@ -16,17 +16,20 @@
     "axios": "^1.12.2",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.7.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.5.1",
     "helmet": "^7.2.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "prom-client": "^15.1.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "xss-clean": "^0.1.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
